--- a/flexbox-2/index.html
+++ b/flexbox-2/index.html
@@ -7,7 +7,9 @@
     <title>Flexbox opdracht 2</title>
 </head>
 <body>
+<div class="container">
     <h1>All Your Business Data in One Place</h1>
     <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or analytics tools.</h3>
+</div>
 </body>
 </html>
