--- a/flexbox-2/index.html
+++ b/flexbox-2/index.html
@@ -8,26 +8,28 @@
 </head>
 <body>
 
+    <h1>All Your Business Data in One Place</h1>
 
-<h1>All Your Business Data in One Place</h1>
-
-<h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
-    analytics tools.</h3>
-<div class="container">
-    <div class="item" id="item1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi corporis dolor dolores eaque
-            excepturi, explicabo facilis ipsa labore laboriosam molestiae perspiciatis possimus quod soluta totam.
-            Aliquam doloribus maxime nobis.</p>
-    </div>
-    <div class="item" id="item2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque deserunt dolores eligendi expedita
-            facilis, fugit ipsum magni minima modi molestias, perspiciatis sequi similique? Accusamus magnam mollitia
-            porro veniam vero?</p>
-    </div>
-    <div class="item" id="item3">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, et, ut. Aperiam commodi consequatur
-            explicabo facilis fugiat impedit ipsa iste mollitia nobis omnis quaerat, quasi quisquam similique ullam
-            vitae voluptates.</p>
+    <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
+        analytics tools.</h3>
+    <div class="container">
+        <div class="item" id="item1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi corporis dolor dolores eaque
+                excepturi, explicabo facilis ipsa labore laboriosam molestiae perspiciatis possimus quod soluta totam.
+                Aliquam doloribus maxime nobis.</p>
+        </div>
+        <div class="item" id="item2">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque deserunt dolores eligendi
+                expedita
+                facilis, fugit ipsum magni minima modi molestias, perspiciatis sequi similique? Accusamus magnam
+                mollitia
+                porro veniam vero?</p>
+        </div>
+        <div class="item" id="item3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, et, ut. Aperiam commodi consequatur
+                explicabo facilis fugiat impedit ipsa iste mollitia nobis omnis quaerat, quasi quisquam similique ullam
+                vitae voluptates.</p>
+        </div>
     </div>
 </div>
 </body>
