added flex to body and alignment/justify to body/.container

--- a/flexbox-2/index.html
+++ b/flexbox-2/index.html
@@ -7,6 +7,7 @@
     <title>Flexbox opdracht 2</title>
 </head>
 <body>
+<div class="page-wrapper">
 
     <h1>All Your Business Data in One Place</h1>
 
