--- a/flexbox-2/index.html
+++ b/flexbox-2/index.html
@@ -15,25 +15,25 @@
         analytics tools.</h3>
 
     <div class="container">
-        <div class="item" id="item1">
+        <article class="item" id="item1">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis commodi corporis dolor dolores eaque
                 excepturi, explicabo facilis ipsa labore laboriosam molestiae perspiciatis possimus quod soluta totam.
                 Aliquam doloribus maxime nobis.</p>
-        </div>
+        </article>
 
-        <div class="item" id="item2">
+        <article class="item" id="item2">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus atque deserunt dolores eligendi
                 expedita
                 facilis, fugit ipsum magni minima modi molestias, perspiciatis sequi similique? Accusamus magnam
                 mollitia
                 porro veniam vero?</p>
-        </div>
+        </article>
 
-        <div class="item" id="item3">
+        <article class="item" id="item3">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, et, ut. Aperiam commodi consequatur
                 explicabo facilis fugiat impedit ipsa iste mollitia nobis omnis quaerat, quasi quisquam similique ullam
                 vitae voluptates.</p>
-        </div>
+        </article>
 
     </div>
 </div>
