added all elements i think i need

--- a/flexbox-3/index.html
+++ b/flexbox-3/index.html
@@ -7,6 +7,16 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-
+<div class="container">
+    <img src="assets/flaticon_logo.svg" alt="logo" class="logo">
+    <ul id="Navigation">
+        <li>Home</li>
+        <li>Over ons</li>
+        <li>Strategie</li>
+        <li>Prijzen</li>
+        <li>Contact</li>
+    </ul>
+    <img src="assets/hamburger.svg" alt="hamburger menu" class="hamburger">
+</div>
 </body>
 </html>
