added nav element, changed size of logo

--- a/flexbox-3/index.html
+++ b/flexbox-3/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
     <link rel="stylesheet" href="styles.css">
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-<div class="container">
-    <img src="assets/flaticon_logo.svg" alt="logo" class="logo">
-    <ul id="Navigation">
-        <li>Home</li>
-        <li>Over ons</li>
-        <li>Strategie</li>
-        <li>Prijzen</li>
-        <li>Contact</li>
-    </ul>
+<nav>
+    <div class="nav-container">
+        <img src="assets/flaticon_logo.svg" alt="logo" class="logo">
+        <ul id="Navigation">
+            <li>Home</li>
+            <li>Over ons</li>
+            <li>Strategie</li>
+            <li>Prijzen</li>
+            <li>Contact</li>
+        </ul>
+    </div>
     <img src="assets/hamburger.svg" alt="hamburger menu" class="hamburger">
-</div>
+
+</nav>
 </body>
 </html>
