changed some elements around for better view

--- a/flexbox-3/index.html
+++ b/flexbox-3/index.html
@@ -9,7 +9,7 @@
 <body>
 <nav>
     <div class="nav-container">
-        <img src="assets/flaticon_logo.svg" alt="logo" class="logo">
+        <img src="assets/flaticon_logo.svg" alt="logo" id="logo">
         <ul id="Navigation">
             <li>Home</li>
             <li>Over ons</li>
@@ -18,7 +18,7 @@
             <li>Contact</li>
         </ul>
     </div>
-    <img src="assets/hamburger.svg" alt="hamburger menu" class="hamburger">
+    <img src="assets/hamburger.svg" alt="hamburger menu" id="hamburger">
 
 </nav>
 </body>
