added #tooltip to design popup tooltip

--- a/pseudo-elements/index.html
+++ b/pseudo-elements/index.html
@@ -26,6 +26,8 @@
             <p>I appreciate everything about you.</p>
         </article>
     </div>
+
+    <div id="tooltip"></div>
     <footer>
         <p>Designed by The Greatest Developer</p>
     </footer>
