--- a/css-grid-1/index.html
+++ b/css-grid-1/index.html
@@ -7,6 +7,12 @@
     <title>Grid opdracht 1</title>
 </head>
 <body>
-
+<div class="grid-container">
+    <div class="grid-item1"></div>
+    <div class="grid-item2"></div>
+    <div class="grid-item3"></div>
+    <div class="grid-item4"></div>
+    <div class="grid-item5"></div>
+</div>
 </body>
 </html>
