--- a/css-grid-1/index.html
+++ b/css-grid-1/index.html
@@ -7,7 +7,8 @@
     <title>Grid opdracht 1</title>
 </head>
 <body>
-<div class="grid-container">
+<div class="grid-container" id="flex-container">
+
     <div class="grid-item1">1</div>
     <div class="grid-item2">2</div>
     <div class="grid-item3">3</div>
