added classes ids and content

--- a/css-grid-2/index.html
+++ b/css-grid-2/index.html
@@ -7,6 +7,19 @@
     <title>Grid opdracht 2</title>
 </head>
 <body>
+<div class="grid-container">
+    <div id="grid-item1" class="flex-container">1</div>
+    <div id="grid-item2" class="flex-container">2</div>
+    <div id="grid-item3" class="flex-container">3</div>
+    <div id="grid-item4" class="flex-container">4</div>
+    <div id="grid-item5" class="flex-container">5</div>
+    <div id="grid-item6" class="flex-container">6</div>
+    <div id="grid-item7" class="flex-container">7</div>
+    <div id="grid-item8" class="flex-container">8</div>
+    <div id="grid-item9" class="flex-container">9</div>
+    <div id="grid-item10" class="flex-container">10</div>
 
+
+</div>
 </body>
 </html>
